Change Webscraper to Selenium

--- a/Notebooks/Backend Driver.ipynb
+++ b/Notebooks/Backend Driver.ipynb
@@ -18,12 +18,11 @@
    "source": [
     "urls = [\"https://www.cnn.com/\",\n",
     "       \"https://www.foxnews.com/\",\n",
-    "       \"https://www.usatoday.com/\",\n",
     "       \"https://abcnews.go.com/\",\n",
     "       \"https://www.cbsnews.com/\"]\n",
     "res = []\n",
     "for url in urls:\n",
-    "    res.append(Webscraper.getSource(url))"
+    "    res.append(Webscraper.getArticles(url))"
    ]
   },
   {
@@ -48,7 +47,6 @@
      "text": [
       "CNN Homepage Preprocessed\n",
       "Fox Homepage Preprocessed\n",
-      "USA Today Homepage Preprocessed\n",
       "ABC Homepage Preprocessed\n",
       "CBS Homepage Preprocessed\n"
      ]
