--- a/Notebooks/Webscraper.ipynb
+++ b/Notebooks/Webscraper.ipynb
@@ -19,6 +19,35 @@
     "    req = requests.get(url)\n",
     "    return req.text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium import webdriver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getArticles(url):\n",
+    "    chrome_options = webdriver.ChromeOptions()\n",
+    "    chrome_options.add_experimental_option(\"useAutomationExtension\", False)\n",
+    "    chrome_options.add_experimental_option(\"excludeSwitches\",[\"enable-automation\"])\n",
+    "    driver = webdriver.Chrome(options=chrome_options,executable_path='C:\\Windows\\Drivers\\chromedriver')\n",
+    "    driver.get(url)\n",
+    "    articles = WebDriverWait(driver, timeout=20).until(lambda d: d.find_elements_by_tag_name('article'))\n",
+    "    driver.close()\n",
+    "    return articles"
+   ]
   }
  ],
  "metadata": {
